<resources>
    <string name="app_name">MessengerFireBase</string>
    <string name="messenger">Messenger</string>
    <string name="your_password">Password:</string>
    <string name="your_email">Your email:</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="last_name">Last name</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="registration">Registration</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_message">Your message</string>
</resources>